--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin button ($color: green) {
+@mixin button($color: green) {
   height: 24px;
   min-width: 24px;
   padding: 3px;
@@ -7,12 +7,11 @@
   display: inline-block;
   color: rgba(0, 0, 0, .7);
 
-  &>span {
+  & i {
     font-size: 18px;
   }
 
-  &:active,
-  &.active {
+  &:active, &.active {
     color: $color;
   }
 
@@ -22,7 +21,8 @@
   }
 }
 
-@mixin clear-list () {
+
+@mixin clear-list() {
   list-style: none;
   margin: 0;
   padding: 0;
