--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -2,17 +2,18 @@
 @import "mixins";
 
 .db {
+
   &__header {
     position: fixed;
     left: 0;
-    top: 0;
     right: 0;
+    top: 0;
     height: $db-header-height;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
-    box-shadow: 0px 2px 5px 2px rgba(60, 64, 67, 0.15);
+    background: #fff;
+    box-shadow: 0 2px 5px 2px rgba(60, 64, 67, 0.15);
     z-index: 1000;
   }
 
@@ -64,13 +65,13 @@
 
   &__list {
     @include clear-list;
-  }  
+  }
 
   &__record {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 14px 14px 16px;
+    padding: 12px 14px 12px 16px;
     margin-bottom: 10px;
 
     &:hover {
@@ -89,4 +90,5 @@
       }
     }
   }
+
 }
