--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import "~normalize.css";
 
 @import "header";
@@ -14,9 +14,8 @@
 }
 
 body {
-  font-family: 'Roboto', 'san-serif';
+  font-family: 'Roboto', sans-serif;
   font-size: 12px;
-
 }
 
 .excel {
@@ -26,3 +25,5 @@ body {
   max-width: 100%;
   font-size: .8rem;
 }
+
+
