--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -5,7 +5,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: $formula-height + $header-height + $toolbar-height;
+  top: $header-height + $toolbar-height + $formula-height;
   overflow-x: auto;
   padding-bottom: 2px;
 
@@ -58,6 +58,7 @@
     white-space: nowrap;
     outline: none;
 
+
     &.selected {
       border: none;
       outline: 2px solid $primary-color;
@@ -65,8 +66,7 @@
     }
   }
 
-  .row-resize,
-  .col-resize {
+  .col-resize, .row-resize {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -75,10 +75,9 @@
     z-index: 1000;
 
     &:hover {
-      opacity: 1 !important;
+      opacity: 1!important;
     }
   }
-
 
   .col-resize {
     top: 0;
@@ -97,4 +96,5 @@
       cursor: row-resize;
     }
   }
+
 }
